RESOLVED FIXED235221
[Debug][GStreamer] Crash in fast/mediastream/get-display-media-settings.html
https://bugs.webkit.org/show_bug.cgi?id=235221
Summary [Debug][GStreamer] Crash in fast/mediastream/get-display-media-settings.html
Diego Pino
Reported 2022-01-14 00:19:11 PST
fast/mediastream/get-display-media-settings.html and other related tests are crashing due to an unsatisfied ASSERT. STDERR: ASSERTION FAILED: !m_hashedID.isEmpty() STDERR: /app/webkit/Source/WebCore/platform/mediastream/RealtimeMediaSource.cpp(1106) : const WTF::String& WebCore::RealtimeMediaSource::hashedId() const Thread 1 (Thread 0x7f38e950e9c0 (LWP 90115)): #0 0x00007f38f245c866 in WTFCrash () at /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0 #1 0x00007f38ef17aa14 in std::numeric_limits<unsigned int>::max() () at /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0 #2 0x00007f38f57818e6 in WebCore::RealtimeMediaSource::hashedId() const () at /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0 #3 0x00007f38f6537eee in WebCore::MockDisplayCaptureSourceGStreamer::settings() () at /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0 #4 0x00007f38f57645cf in WebCore::MediaStreamTrackPrivate::settings() const () at /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0 #5 0x00007f38f3cbef8f in WebCore::MediaStreamTrack::getSettings() const () at /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0 #6 0x00007f38f3005eea in WebCore::jsMediaStreamTrackPrototypeFunction_getSettingsBody(JSC::JSGlobalObject*, JSC::CallFrame*, WebCore::JSMediaStreamTrack*) () at /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0 #7 0x00007f38f301fdfb in long WebCore::IDLOperation<WebCore::JSMediaStreamTrack>::call<&WebCore::jsMediaStreamTrackPrototypeFunction_getSettingsBody, (WebCore::CastedThisErrorBehavior)0>(JSC::JSGlobalObject&, JSC::CallFrame&, char const*) () at /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0 #8 0x00007f38f3005f8a in WebCore::jsMediaStreamTrackPrototypeFunction_getSettings(JSC::JSGlobalObject*, JSC::CallFrame*) () at /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0 #9 0x00007f38a80ff1d8 in () #10 0x00007fff11989010 in () #11 0x00007f38f259dda0 in op_call_slow_return_location () at /app/webkit/WebKitBuild/Debug/lib/libWPEWebKit-1.1.so.0 #12 0x0000000000000000 in () Other tests that are failing with the same stacktrace are: fast/mediastream/constraint-intrinsic-size.html fast/mediastream/get-display-media-capabilities.html fast/mediastream/getDisplayMedia-frame-rate.html fast/mediastream/getDisplayMedia-max-constraints1.html fast/mediastream/getDisplayMedia-max-constraints2.html fast/mediastream/getDisplayMedia-max-constraints3.html fast/mediastream/getDisplayMedia-size.html http/tests/media/media-stream/get-display-media-prompt.html
Attachments
Tests crashing with a similar stacktrace (53.02 KB, application/gzip)
2022-01-14 00:23 PST, Diego Pino
no flags
Patch (2.03 KB, patch)
2022-01-15 02:49 PST, Philippe Normand
no flags
Diego Pino
Comment 1 2022-01-14 00:23:36 PST
Created attachment 449143 [details] Tests crashing with a similar stacktrace
Philippe Normand
Comment 2 2022-01-15 02:49:55 PST
EWS
Comment 3 2022-01-17 01:30:14 PST
Committed r288091 (246105@main): <https://commits.webkit.org/246105@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449249 [details].
Radar WebKit Bug Importer
Comment 4 2022-01-17 01:31:18 PST
Note You need to log in before you can comment on or make changes to this bug.