[Debug][GStreamer] Crash in fast/mediastream/get-display-media-settings.html https://bugs.webkit.org/show_bug.cgi?id=235221

Patch by Philippe Normand <pnormand@igalia.com> on 2022-01-17
Reviewed by Xabier Rodriguez-Calvar.

Fix use-after-move issue in MockDisplayCaptureSourceGStreamer. The hashSalt string was moved
to the wrapped mock video source, and then again as a parent class constructor parameter.

* platform/mediastream/gstreamer/MockRealtimeVideoSourceGStreamer.cpp:
(WebCore::MockDisplayCaptureSourceGStreamer::create):


Canonical link: https://commits.webkit.org/246105@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288091 268f45cc-cd09-0410-ab3c-d52691b4dbfc